# HockeyMinimapServer

./: .gitignore  LICENSE  README.md  README_ru.md  config.toml  demo_inference.py  dev_requirements.txt  post_install.py  pyproject.toml  requirements.txt  setup.py  start.bat
docs/source/: conf.py  index.rst
server/: __init__.py  __main__.py  demo_inference.py  main.py  minimap_server.py
server/algorithms/: batch_predictor.py  demo_inference.py  disk_space_allocator.py  field_detection.py  field_predictor_service.py  field_shapes_detector.py  key_point_placer.py  lens_picker.py  player_predictor_service.py  player_tracker.py  player_tracking.py  players_mapper.py  predictor_service.py  video_processing.py
server/controllers/: api_router.py  dataset_management.py  player_data_management.py  project_management.py  user_authentication.py  users_management.py  users_managment.py  video_endpoints.py  video_management.py  video_to_map_endpoints.py  video_upload.py
server/models/: coordinates.py  field_data.py  frame.py  minimap.py  player_data.py  project.py  user.py  user_permissions.py  video.py
server/utils/: __init__.py  async_buffered_generator.py  async_video_reader.py  chain_video_slices.py  dataset_utils.py  file_lock.py
server/views/: dataset_view.py  map_view.py  player_data_view.py  project_view.py  user_view.py  user_views.py  video_view.py
server/views/dto/: frame_dto.py
tests/test_algorithms/: test_bounding_box.py  test_key_point_placer.py  test_point.py
tests/test_disk_allocator/: test_disk_allocator.py
tests/test_sqlalchemy_impl/: fixtures.py  test_dataset_repo.py  test_frames_repo.py  test_map_data_repo.py  test_player_data_repo.py  test_project_repo.py  test_projects_import_export.py  test_user_repo_impl.py  test_video_repo.py
(+147 files in other folders)
